fixed spacing of header and about me section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
 
+.SITE_HEADER_WRAPPER{
+  margin-top: -25px;
+}
 .dBAkHi {
   display: none;
 }
@@ -56,7 +59,7 @@
 .about-grid {
   margin-top: -250px;
   --num-cols: 2;
-  --row-height: 339px;
+  --row-height: 368px;
   box-sizing: border-box;
 	padding: var(--gap);
   padding-left: 24%;
@@ -74,7 +77,7 @@
 
 .about-info{
   display: inline-block;
-  margin: 40px;
+  margin: 35px;
   --font-family: "Roboto", sans-serf;
 }
 .about-me{
